Updating blog content

--- a/Output/notes/Practical Deep Learning/index.html
+++ b/Output/notes/Practical Deep Learning/index.html
@@ -9,16 +9,16 @@
 
 ### Traditional programming
 
-#### Inputs -> Program -> Results
+**Inputs -> Program -> Results**
 
 ### Deep learning
 
-####Inputs + Weights -> Model -> Results
+**Inputs + Weights -> Model -> Result**s
 
 Model is mathematical function that takes inputs and multiplies them by one set of weights and adds them up, then it does the same with the second set of weights and adds them up again. Then it takes all the negative numbers and replaces them with zeros. And then it takes those as inputs to another layer. That is neural network.
 
 At first weights are random so model doesn't do anything useful. Therefore, when we get the result we evaluate how correct they are and then we update the weights. We do this many times until we get the result we want. Model in the end is a very flexible function.
 
-Once we got the trained model, then we can use it just as a regular program:
+Once we got the trained model, then we can use it just as a regular program.
 
-#### Inputs -> Model -> Results</p></div></div></div><div class="footer pure-u-1"><div class="pure-u-1">© 2023 Povilas Staškus</div><div class="pure-u-1">Generated using <a href="https://github.com/johnsundell/publish">Publish</a></div><div class="pure-u-1"><a href="/feed.rss">RSS feed</a></div></div></div></body></html>
+**Inputs -> Model -> Results**</p></div></div></div><div class="footer pure-u-1"><div class="pure-u-1">© 2023 Povilas Staškus</div><div class="pure-u-1">Generated using <a href="https://github.com/johnsundell/publish">Publish</a></div><div class="pure-u-1"><a href="/feed.rss">RSS feed</a></div></div></div></body></html>
